--- a/public/styles.css
+++ b/public/styles.css
@@ -38,13 +38,15 @@ header {
   display: flex;
   justify-content: center;
   align-items: center;
+  font-size: 28px;
 }
 
-/* #start-btn {
-  display: block;
-  margin: auto;
-  font-size: 2rem;
-} */
+#start-btn {
+  border: 0;
+  background-color: white;
+  font-size: 24px;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
 
 p.about {
   margin: 5%;
